<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activities.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <!-- This defines the number of Rows -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical"
        android:weightSum="2"
        android:background="#8c8c8c"> <!--No of Rows defined -->

        <!-- First Row, defined with 3 columns -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="3">

            <!-- Diagnostics Button Image -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:weightSum="1"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/btnDiagnostics"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:src="@drawable/diagnostics"
                    android:contentDescription="@string/MADiagnostics"
                    android:padding="10dp"
                    android:scaleType="fitCenter"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:text="@string/MADiagnostics"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#FFFFFF"
                    android:textAlignment="center" />
            </LinearLayout>
            <!-- Diagnostics Button Image END -->
            <!-- Live Data Button Image -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:weightSum="1"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/btnLiveData"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:src="@drawable/livedata"
                    android:contentDescription="@string/MALiveData"
                    android:padding="10dp"
                    android:scaleType="fitCenter"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:text="@string/MALiveData"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#FFFFFF"
                    android:textAlignment="center" />
            </LinearLayout>
            <!-- Live Data Button Image END -->
            <!-- Saved DTC Button Image -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:weightSum="1"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/btnSavedDTC"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:src="@drawable/history"
                    android:contentDescription="@string/MAStored"
                    android:padding="10dp"
                    android:scaleType="fitCenter"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:text="@string/MAStored"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#FFFFFF"
                    android:textAlignment="center" />
            </LinearLayout>
            <!-- Saved DTC Button Image END -->
        </LinearLayout>

        <!-- Second Row, defined with 3 columns -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="3">

            <!-- Garages Map Button Image -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:weightSum="1"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/btnGaragesMap"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:src="@drawable/garages"
                    android:contentDescription="@string/MAMap"
                    android:padding="10dp"
                    android:scaleType="fitCenter"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:text="@string/MAMap"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#FFFFFF"
                    android:textAlignment="center" />
            </LinearLayout>
            <!-- Garages Map Button Image END -->
            <!-- Settings Button Image -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:weightSum="1"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/btnSettings"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:src="@drawable/settings"
                    android:contentDescription="@string/MASettings"
                    android:padding="10dp"
                    android:scaleType="fitCenter"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:text="@string/MASettings"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#FFFFFF"
                    android:textAlignment="center" />
            </LinearLayout>
            <!-- Settings Button Image END -->
            <!-- Updates Button Image -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:weightSum="1"
                android:orientation="vertical" >

                <ImageButton
                    android:id="@+id/btnUpdates"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:src="@drawable/updates"
                    android:contentDescription="@string/MAUpdates"
                    android:padding="10dp"
                    android:scaleType="fitCenter"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:text="@string/MAUpdates"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#FFFFFF"
                    android:textAlignment="center" />
            </LinearLayout>
            <!-- Updates Button Image END -->
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
